[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nl-test"
version = "0.2.0"
description = "Run automation test suites (Selenium, Playwright, Cypress, REST Assured, and more) using plain English commands."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "nltest contributors" }]
keywords = ["testing", "automation", "selenium", "playwright", "cypress", "pytest", "cli", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "PyYAML>=6.0",
    "rapidfuzz>=3.0.0",
    "rich>=13.0.0",
    "sentence-transformers>=3.0.0",
    "huggingface-hub>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/Yashas-N-R/runTestCLI"
Repository = "https://github.com/Yashas-N-R/runTestCLI"
Issues = "https://github.com/Yashas-N-R/runTestCLI/issues"
Documentation = "https://github.com/Yashas-N-R/runTestCLI#readme"

[project.scripts]
nltest = "nltest.cli:main"

[tool.setuptools.packages.find]
include = ["nltest*"]

[tool.setuptools.package-data]
nltest = ["bundled_models/**/*"]
